--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </head>
 
     <body>
-        <header>
+        <header class="header-border">
             <div class="container main-nav">
                 <nav class="top-navigation">
                     <a href="/" class="logo link"
@@ -28,7 +28,9 @@
                     >
                     <ul class="menu-list list">
                         <li class="menu-item">
-                            <a href="" class="menu link current">Студія</a>
+                            <a href="./index.html" class="menu link current"
+                                >Студія</a
+                            >
                         </li>
                         <li class="menu-item">
                             <a href="./portfolio.html" class="menu link"
@@ -39,25 +41,33 @@
                             <a href="" class="menu link">Контакти</a>
                         </li>
                     </ul>
-
-                    <ul class="list-contakts list">
-                        <li class="item">
-                            <a
-                                href="mailto:info@devstudio.com"
-                                class="header-contakt link"
-                            >
-                                info@devstudio.com</a
-                            >
-                        </li>
-                        <li class="item">
-                            <a
-                                href="tel:+380961111111"
-                                class="header-contakt link"
-                                >+38 096 111 11 11</a
-                            >
-                        </li>
-                    </ul>
                 </nav>
+                <ul class="list-contakts list">
+                    <li class="item">
+                        <a
+                            href="mailto:info@devstudio.com"
+                            class="header-contakt link"
+                        >
+                            <svg class="svg-contact" width="16" height="12">
+                                <use
+                                    href="./images/symbol-defs.svg#icon-envelopehover"
+                                ></use>
+                            </svg>
+                            info@devstudio.com</a
+                        >
+                    </li>
+                    <li class="item">
+                        <a href="tel:+380961111111" class="header-contakt link">
+                            <svg class="svg-contact" width="10" height="16">
+                                <use
+                                    href="./images/symbol-defs.svg#icon-smartphone"
+                                ></use>
+                            </svg>
+
+                            +38 096 111 11 11</a
+                        >
+                    </li>
+                </ul>
             </div>
         </header>
 
@@ -78,8 +88,16 @@
             <section class="advantages section">
                 <div class="container">
                     <h2 class="visually-hidden">Наші переваги</h2>
-                    <ul class="advantages-list">
+                    <ul class="advantages-list list">
                         <li class="item">
+                            <div class="advantages-svg">
+                                <svg width="70" height="70">
+                                    <use
+                                        href="./images/symbol-defs.svg#icon-antenna"
+                                    ></use>
+                                </svg>
+                            </div>
+
                             <h3 class="advantages-title">УВАГА ДО ДЕТАЛЕЙ</h3>
                             <p class="advantages-text">
                                 Lorem ipsum dolor sit amet, consectetur
@@ -88,6 +106,13 @@
                             </p>
                         </li>
                         <li class="item">
+                            <div class="advantages-svg">
+                                <svg width="70" height="70">
+                                    <use
+                                        href="./images/symbol-defs.svg#icon-clock"
+                                    ></use>
+                                </svg>
+                            </div>
                             <h3 class="advantages-title">ПунктуальнІсть</h3>
                             <p class="advantages-text">
                                 Lorem ipsum dolor sit amet, consectetur
@@ -96,7 +121,15 @@
                             </p>
                         </li>
                         <li class="item">
-                            <h3 class="advantages-title">ПЛанування</h3>
+                            <div class="advantages-svg">
+                                <svg width="70" height="70">
+                                    <use
+                                        href="./images/symbol-defs.svg#icon-diagram"
+                                    ></use>
+                                </svg>
+                            </div>
+
+                            <h3 class="advantages-title">Планування</h3>
                             <p class="advantages-text">
                                 Lorem ipsum dolor sit amet, consectetur
                                 adipisicing elit. Voluptatem veritatis
@@ -104,6 +137,14 @@
                             </p>
                         </li>
                         <li class="item">
+                            <div class="advantages-svg">
+                                <svg width="70" height="70">
+                                    <use
+                                        href="./images/symbol-defs.svg#icon-astronaut"
+                                    ></use>
+                                </svg>
+                            </div>
+
                             <h3 class="advantages-title">СУЧАСНІ ТЕхнології</h3>
                             <p class="advantages-text">
                                 Lorem ipsum dolor sit amet, consectetur
@@ -157,7 +198,47 @@
                             />
                             <h3 class="our-teem-title">Ігор Дем’яненко</h3>
                             <p class="our-teem-text">Product Designer</p>
+                            <!-- cocial  -->
+                            <ul class="cocial-icon-list">
+                                <li class="cocial-ikon-item">
+                                    <a class="cocia-icon-link" href="">
+                                        <svg width="20" height="20">
+                                            <use
+                                                href="./images/symbol-defs.svg#icon-instagram"
+                                            ></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="cocial-ikon-item">
+                                    <a class="cocia-icon-link" href="">
+                                        <svg width="20" height="20">
+                                            <use
+                                                href="./images/symbol-defs.svg#icon-twitter"
+                                            ></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="cocial-ikon-item">
+                                    <a class="cocia-icon-link" href="">
+                                        <svg width="20" height="20">
+                                            <use
+                                                href="./images/symbol-defs.svg#icon-facebook"
+                                            ></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="cocial-ikon-item">
+                                    <a class="cocia-icon-link" href="">
+                                        <svg class="" width="20" height="20">
+                                            <use
+                                                href="./images/symbol-defs.svg#icon-linkedin"
+                                            ></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </li>
+
                         <li class="item">
                             <img
                                 src="./images/olga.jpg"
@@ -166,6 +247,45 @@
                             />
                             <h3 class="our-teem-title">Ольга Репіна</h3>
                             <p class="our-teem-text">Frontend Developer</p>
+                            <!-- cocial  -->
+                            <ul class="cocial-icon-list">
+                                <li class="cocial-ikon-item">
+                                    <a class="cocia-icon-link" href="">
+                                        <svg width="20" height="20">
+                                            <use
+                                                href="./images/symbol-defs.svg#icon-instagram"
+                                            ></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="cocial-ikon-item">
+                                    <a class="cocia-icon-link" href="">
+                                        <svg width="20" height="20">
+                                            <use
+                                                href="./images/symbol-defs.svg#icon-twitter"
+                                            ></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="cocial-ikon-item">
+                                    <a class="cocia-icon-link" href="">
+                                        <svg width="20" height="20">
+                                            <use
+                                                href="./images/symbol-defs.svg#icon-facebook"
+                                            ></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="cocial-ikon-item">
+                                    <a class="cocia-icon-link" href="">
+                                        <svg class="" width="20" height="20">
+                                            <use
+                                                href="./images/symbol-defs.svg#icon-linkedin"
+                                            ></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </li>
                         <li class="item">
                             <img
@@ -175,6 +295,45 @@
                             />
                             <h3 class="our-teem-title">Микола Тарасов</h3>
                             <p class="our-teem-text">Marketing</p>
+                            <!-- cocial  -->
+                            <ul class="cocial-icon-list">
+                                <li class="cocial-ikon-item">
+                                    <a class="cocia-icon-link" href="">
+                                        <svg width="20" height="20">
+                                            <use
+                                                href="./images/symbol-defs.svg#icon-instagram"
+                                            ></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="cocial-ikon-item">
+                                    <a class="cocia-icon-link" href="">
+                                        <svg width="20" height="20">
+                                            <use
+                                                href="./images/symbol-defs.svg#icon-twitter"
+                                            ></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="cocial-ikon-item">
+                                    <a class="cocia-icon-link" href="">
+                                        <svg width="20" height="20">
+                                            <use
+                                                href="./images/symbol-defs.svg#icon-facebook"
+                                            ></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="cocial-ikon-item">
+                                    <a class="cocia-icon-link" href="">
+                                        <svg class="" width="20" height="20">
+                                            <use
+                                                href="./images/symbol-defs.svg#icon-linkedin"
+                                            ></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </li>
                         <li class="item">
                             <img
@@ -184,6 +343,45 @@
                             />
                             <h3 class="our-teem-title">Михайло Єрмаков</h3>
                             <p class="our-teem-text">UI Designer</p>
+                            <!-- cocial  -->
+                            <ul class="cocial-icon-list">
+                                <li class="cocial-ikon-item">
+                                    <a class="cocia-icon-link" href="">
+                                        <svg width="20" height="20">
+                                            <use
+                                                href="./images/symbol-defs.svg#icon-instagram"
+                                            ></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="cocial-ikon-item">
+                                    <a class="cocia-icon-link" href="">
+                                        <svg width="20" height="20">
+                                            <use
+                                                href="./images/symbol-defs.svg#icon-twitter"
+                                            ></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="cocial-ikon-item">
+                                    <a class="cocia-icon-link" href="">
+                                        <svg width="20" height="20">
+                                            <use
+                                                href="./images/symbol-defs.svg#icon-facebook"
+                                            ></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="cocial-ikon-item">
+                                    <a class="cocia-icon-link" href="">
+                                        <svg class="" width="20" height="20">
+                                            <use
+                                                href="./images/symbol-defs.svg#icon-linkedin"
+                                            ></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </li>
                     </ul>
                 </div>
