--- a/portfolio.html
+++ b/portfolio.html
@@ -45,12 +45,23 @@
                             href="mailto:info@devstudio.com"
                             class="header-contakt link"
                         >
+                            <svg class="svg-contact" width="16" height="12">
+                                <use
+                                    href="./images/symbol-defs.svg#icon-envelopehover"
+                                ></use>
+                            </svg>
                             info@devstudio.com</a
                         >
                     </li>
                     <li class="item">
-                        <a href="tel:+380961111111" class="header-contakt link"
-                            >+38 096 111 11 11</a
+                        <a href="tel:+380961111111" class="header-contakt link">
+                            <svg class="svg-contact" width="10" height="16">
+                                <use
+                                    href="./images/symbol-defs.svg#icon-smartphone"
+                                ></use>
+                            </svg>
+
+                            +38 096 111 11 11</a
                         >
                     </li>
                 </ul>
