--- a/portfolio.html
+++ b/portfolio.html
@@ -124,82 +124,168 @@
                             </a>
                         </li>
                         <li class="item">
-                            <img
-                                src="./images/dizain.jpg"
-                                alt="Design"
-                                width="370"
-                            />
-                            <h3 class="portfolio-title">
-                                Постер New Orlean vs Golden Star
-                            </h3>
-                            <p class="portfolio-text">Дизайн</p>
+                            <a class="project-link" href="">
+                                <div class="project-thumb">
+                                    <div class="project-overlay">
+                                        <p class="overlay-text"></p>
+                                    </div>
+                                    <img
+                                        src="./images/dizain.jpg"
+                                        alt="Design"
+                                        width="370"
+                                    />
+                                </div>
+                                <div class="project-discraption">
+                                    <h3 class="portfolio-title">
+                                        Постер New Orlean vs Golden Star
+                                    </h3>
+                                    <p class="portfolio-text">Дизайн</p>
+                                </div>
+                            </a>
                         </li>
                         <li class="item">
-                            <img
-                                src="./images/restoraunt.jpg"
-                                alt="Application"
-                                width="370"
-                            />
-                            <h3 class="portfolio-title">Ресторан Seafood</h3>
-                            <p class="portfolio-text">Застосунки</p>
+                            <a class="project-link" href="">
+                                <div class="project-thumb">
+                                    <div class="project-overlay">
+                                        <p class="overlay-text"></p>
+                                    </div>
+                                    <img
+                                        src="./images/restoraunt.jpg"
+                                        alt="Application"
+                                        width="370"
+                                    />
+                                </div>
+                                <div class="project-discraption">
+                                    <h3 class="portfolio-title">
+                                        Ресторан Seafood
+                                    </h3>
+                                    <p class="portfolio-text">Застосунки</p>
+                                </div>
+                            </a>
                         </li>
                         <li class="item">
-                            <img
-                                src="./images/project.jpg"
-                                alt="Marketing"
-                                width="370"
-                            />
-                            <h3 class="portfolio-title">Проект Prime</h3>
-                            <p class="portfolio-text">Маркетинг</p>
+                            <a class="project-link" href="">
+                                <div class="project-thumb">
+                                    <div class="project-overlay">
+                                        <p class="overlay-text"></p>
+                                    </div>
+                                    <img
+                                        src="./images/project.jpg"
+                                        alt="Marketing"
+                                        width="370"
+                                    />
+                                </div>
+                                <div class="project-discraption">
+                                    <h3 class="portfolio-title">
+                                        Проект Prime
+                                    </h3>
+                                    <p class="portfolio-text">Маркетинг</p>
+                                </div>
+                            </a>
+                        </li>
+
+                        <li class="item">
+                            <a class="project-link" href="">
+                                <div class="project-thumb">
+                                    <div class="project-overlay">
+                                        <p class="overlay-text"></p>
+                                    </div>
+
+                                    <img
+                                        src="./images/project boxes.jpg"
+                                        alt="Application"
+                                        width="370"
+                                    />
+                                </div>
+                                <div class="project-discraption">
+                                    <h3 class="portfolio-title">
+                                        Проект Boxes
+                                    </h3>
+                                    <p class="portfolio-text">Застосунки</p>
+                                </div>
+                            </a>
                         </li>
                         <li class="item">
-                            <img
-                                src="./images/project boxes.jpg"
-                                alt="Application"
-                                width="370"
-                            />
-                            <h3 class="portfolio-title">Проект Boxes</h3>
-                            <p class="portfolio-text">Застосунки</p>
+                            <a class="project-link" href="">
+                                <div class="project-thumb">
+                                    <div class="project-overlay">
+                                        <p class="overlay-text"></p>
+                                    </div>
+
+                                    <img
+                                        src="./images/inspiration.jpg"
+                                        alt="Website"
+                                        width="370"
+                                    />
+                                </div>
+                                <div class="project-discraption">
+                                    <h3 class="portfolio-title">
+                                        Inspiration has no Borders
+                                    </h3>
+                                    <p class="portfolio-text">Веб-сайти</p>
+                                </div>
+                            </a>
                         </li>
                         <li class="item">
-                            <img
-                                src="./images/inspiration.jpg"
-                                alt="Website"
-                                width="370"
-                            />
-                            <h3 class="portfolio-title">
-                                Inspiration has no Borders
-                            </h3>
-                            <p class="portfolio-text">Веб-сайти</p>
+                            <a class="project-link" href="">
+                                <div class="project-thumb">
+                                    <div class="project-overlay">
+                                        <p class="overlay-text"></p>
+                                    </div>
+
+                                    <img
+                                        src="./images/limited edition.jpg"
+                                        alt="Design"
+                                        width="370"
+                                    />
+                                </div>
+                                <div class="project-discraption">
+                                    <h3 class="portfolio-title">
+                                        Видавництво Limited Edition
+                                    </h3>
+                                    <p class="portfolio-text">Дизайн</p>
+                                </div>
+                            </a>
                         </li>
                         <li class="item">
-                            <img
-                                src="./images/limited edition.jpg"
-                                alt="Design"
-                                width="370"
-                            />
-                            <h3 class="portfolio-title">
-                                Видавництво Limited Edition
-                            </h3>
-                            <p class="portfolio-text">Дизайн</p>
+                            <a class="project-link" href="">
+                                <div class="project-thumb">
+                                    <div class="project-overlay">
+                                        <p class="overlay-text"></p>
+                                    </div>
+
+                                    <img
+                                        src="./images/labeltag.jpg"
+                                        alt="Marketing"
+                                        width="370"
+                                    />
+                                </div>
+                                <div class="project-discraption">
+                                    <h3 class="portfolio-title">Проект LAB</h3>
+                                    <p class="portfolio-text">Маркетинг</p>
+                                </div>
+                            </a>
                         </li>
                         <li class="item">
-                            <img
-                                src="./images/labeltag.jpg"
-                                alt="Marketing"
-                                width="370"
-                            />
-                            <h3 class="portfolio-title">Проект LAB</h3>
-                            <p class="portfolio-text">Маркетинг</p>
-                        </li>
-                        <li class="item">
-                            <img
-                                src="./images/growing.jpg"
-                                alt="Application"
-                                width="370"
-                            />
-                            <h3 class="portfolio-title">Growing Business</h3>
-                            <p class="portfolio-text">Замовити</p>
+                            <a class="project-link" href="">
+                                <div class="project-thumb">
+                                    <div class="project-overlay">
+                                        <p class="overlay-text"></p>
+                                    </div>
+
+                                    <img
+                                        src="./images/growing.jpg"
+                                        alt="Application"
+                                        width="370"
+                                    />
+                                </div>
+                                <div class="project-discraption">
+                                    <h3 class="portfolio-title">
+                                        Growing Business
+                                    </h3>
+                                    <p class="portfolio-text">Замовити</p>
+                                </div>
+                            </a>
                         </li>
                     </ul>
                 </div>
