--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
         />
+        <link rel="stylesheet" href="./css/style.min.css">
         <link rel="stylesheet" href="./css/style.css" />
         <title>WebStudia</title>
     </head>
