--- a/index.html
+++ b/index.html
@@ -20,40 +20,40 @@
             href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
         />
         <link rel="stylesheet" href="./css/style.min.css">
-        <link rel="stylesheet" href="./css/style.css" />
+        
         <title>WebStudia</title>
     </head>
 
     <body>
-        <header class="header-border">
+        <header class="header-border header">
             <div class="container main-nav">
                 <nav class="top-navigation">
                     <a href="/" class="logo link"
                         ><span class="span-logo">Web</span>Studio</a
                     >
                     <ul class="menu-list list">
-                        <li class="menu-item">
-                            <a href="./index.html" class="menu link current"
+                        <li class="menu-list__menu-item">
+                            <a href="./index.html" class="menu-list__menu link current"
                                 >Студія</a
                             >
                         </li>
-                        <li class="menu-item">
-                            <a href="./portfolio.html" class="menu link"
+                        <li class="menu-list__menu-item">
+                            <a href="./portfolio.html" class="menu-list__menu link"
                                 >Портфоліо</a
                             >
                         </li>
-                        <li class="menu-item">
-                            <a href="" class="menu link">Контакти</a>
+                        <li class="menu-list__menu-item">
+                            <a href="" class="menu-list__menu link">Контакти</a>
                         </li>
                     </ul>
                 </nav>
                 <ul class="list-contakts list">
-                    <li class="item">
+                    <li class="list-contakts__item">
                         <a
                             href="mailto:info@devstudio.com"
-                            class="header-contakt link"
+                            class="list-contakts__header-contakt link"
                         >
-                            <svg class="svg-contact" width="16" height="12">
+                            <svg class="list-contakts__svg-contact" width="16" height="12">
                                 <use
                                     href="./images/symbol-defs.svg#icon-envelopehover"
                                 ></use>
@@ -61,9 +61,9 @@
                             info@devstudio.com</a
                         >
                     </li>
-                    <li class="item">
-                        <a href="tel:+380961111111" class="header-contakt link">
-                            <svg class="svg-contact" width="10" height="16">
+                    <li class="list-contakts__item">
+                        <a href="tel:+380961111111" class="list-contakts__header-contakt link">
+                            <svg class="list-contakts__svg-contact" width="10" height="16">
                                 <use
                                     href="./images/symbol-defs.svg#icon-smartphone"
                                 ></use>
@@ -81,12 +81,12 @@
             <section class="hero section">
               
                 <div class="container">
-                    <h1 class="hero-title">
+                    <h1 class="hero__hero-title">
                         Ефективні рішення для вашого бізнесу
                     </h1>
                     <button
                         type="button"
-                        class="hero-btn"
+                        class="hero__hero-btn"
                         data-action="open-modal"
                     >
                         Замовити послугу
